--- a/src/index.css
+++ b/src/index.css
@@ -82,3 +82,12 @@ input {
   background-color: white;
   color: black;
 }
+
+footer {
+  position: fixed;
+  width: 100%;
+  right: 0;
+  bottom: 0;
+  text-align: end;
+  padding-right: 20px;
+}
