--- a/src/index.css
+++ b/src/index.css
@@ -91,3 +91,48 @@ footer {
   text-align: end;
   padding-right: 20px;
 }
+
+/* media sizings */
+
+/* cell phone */
+@media only screen and (max-width: 599px) {
+
+  .title {
+    font-size: 1em;
+  }
+
+  .instructions {
+    width: 75%;
+  }
+  .form {
+    width: 75%;
+  }
+}
+
+/* table portrait */
+@media only screen and (min-width: 600px) {
+
+}
+
+/* tablet landscape */
+@media only screen and (min-width: 900px) {
+
+
+}
+
+/* desktop up */
+@media only screen and (min-width: 1200px) {
+
+}
+
+/* them big ol screens */
+@media only screen and (min-width: 1800px) {
+
+}
+
+
+@media only screen and (max-height: 800px) {
+  .form {
+    padding-bottom: 3.5em;
+  }
+}
